# otel-metrics

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
configs/: alert_rules.yml  alertmanager.yml  otel-collector-config.yml  prometheus.yml
configs/grafana-provisioning/datasources/: jaeger.yml
dal/: Cargo.toml
poll-program/: Cargo.toml
poll-program/src/: main.rs
program/: Cargo.toml
program/src/: main.rs
prometheus-data/data/chunks_head/: 000001
prometheus-data/data/wal/: 00000000
scripts/: second_test.sh  test_metrics.sh
server/: Cargo.toml  Dockerfile
server/src/: main.rs
t-logging/: Cargo.toml
t-logging/src/: lib.rs  t_tracing.rs  tracing_macros.rs
t-logging/src/metrics/: mod.rs  provider.rs
t-logging/src/metrics/units/: kernel.rs  mod.rs  traits.rs
trigger/: Cargo.toml
trigger/src/: main.rs
