[package]
name = "t-logging"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"] }
tracing-opentelemetry = "0.28.0"
opentelemetry = { version = "0.27.1", features = ["trace"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio", "metrics", "spec_unstable_metrics_views"]}
opentelemetry-stdout = "0.27.0"
tokio = { version = "1.43.0", features = ["full"] }
opentelemetry-otlp = { version = "0.27.0", features = ["http-json", "reqwest-client"] }
reqwest = { version = "0.12.12", features = ["json"] }
tracing-attributes = "0.1.24"
